tests/test_files_pa3/errors/VariableLocationTestBad.ic
class A { void foo(){}}

class B
{

	int a;
	string b;
	boolean c;
	A d;
	
}

class C extends B
{

	static void main(string[] args) { }
	
	string foo(int x, string y, boolean z)
	{
		B bClass = new B();
		int aa;
		string bb;
		boolean cc;
		A dd;
		
		aa = x;
		bb = y;
		cc = z;
		dd = new A();
		
		bClass.a = bb;
		bClass.b = cc;
		bClass.c = dd;
		bClass.d = aa;
		
		aa =
			bb.a;
		aa =
			bClass.e;
		aa =
			dd.foo;
		
		return bClass.b;	
	}
}